swift/ql/test/extractor-tests/errors/UnspecifiedElementParents.ql
import swift

from UnspecifiedElement e, Locatable parent
where parent = e.getParent()
select parent, e
